# hermes-agent-skills

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEEDBACK.md  LICENSE  MANIFEST.in  README.en.md  README.md  README.zh-CN.md  RELEASE_v2.0.0-beta.md  TEST_REPORT.md  pyproject.toml  test_hermeshub.py  v2-项目总结.txt
.github/: DISCUSSION_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_issue.yml  feature_request.yml  skill_request.yml
.github/workflows/: ci.yml
agents/devops-sre/: SKILL.md  persona.md
agents/devops-sre/skills/: ci_cd_generator.py  docker_optimizer.py  k8s_deployer.py  log_analyzer.py
agents/python-pro/: SKILL.md  memory.md
agents/python-pro/skills/: code_review.py  package_scaffold.py  performance_profile.py  test_generator.py  type_checker.py
archive/internal/: RELEASE_v1.1.0.md  beta-operations-framework.md  beta-release-execution-plan.md  community-launch-v1.1.md  dogfood-report.md  general-production-readiness-report.md  launch-authorization-certificate.md  user-acquisition-tracker.md
archive/internal/local-artifacts/: 00_Project.md  01_Architecture.md  02_Validator.md  03_CLI.md  04_Docs.md  05_Release.md  06_Launch.md  07_Outreach.md  08_Feedback.md  99_MasterBrain.md  full-summary.md
benchmarks/: coding_benchmark.py  debugging_benchmark.py  installation_benchmark.py  results_coding.json  results_debugging.json
docs/: CONTRIBUTING.md  FAQ.md  QUICKSTART.md  README.md  TUTORIAL.md  architecture.md  discussion-body.md  hermes-v2-mvp.md  user-feedback-system.md
docs/case-studies/: unreal-plugin-evaluation.md
docs/growth/: feedback-classification-report.md  first-10-users-plan.md  weekly-adoption-report-w1.md
docs/reports/: hermes-agent-skills-unreal-plugin-test.md  validation-report-v1.1.0.md
docs/v2/: architecture.md  beta-readiness-report.md  evidence-closure-report.md  migration.md  orr-report.md  rc-gate-review.md
scripts/: enable_discussions.py  install.sh  post_discussion.py  public_repo_audit.py
skills/agents/devops-sre/: SKILL.md
skills/agents/python-pro/: SKILL.md
skills/define/requirement-analyzer/: SKILL.md
skills/define/spec-driven-dev/: SKILL.md
skills/evolve/persona-aware-coding/: SKILL.md
skills/evolve/skill-curator/: SKILL.md
skills/ship/cicd-orchestrator/: SKILL.md
skills/verify/code-quality-guardian/: SKILL.md
skills/verify/debugger-coordinator/: SKILL.md
src/cli/: __init__.py  main.py
src/cli/commands/: __init__.py  create.py  list.py  validate.py
src/hermes_agent_skills/: __init__.py  cli.py  evolution.py  models.py  soul_reader.py  validator.py
src/hermes_v2/: __init__.py  cli.py  constraints.py  entities.py  evaluator.py  modes.py  orchestrator.py  router.py  task_registry.py
tasks/: create_project.yaml  fix_bug.yaml  install_project.yaml  publish_project.yaml  write_docs.yaml
tests/: __init__.py  test_evolution.py  test_hermes_agent_integration.py  test_hermes_v2_constraints.py  test_hermes_v2_e2e.py  test_hermes_v2_modes.py  test_hermes_v2_orchestrator.py  test_hermes_v2_router.py  test_init.py  test_soul_reader.py  test_validator.py
tests/devops-sre/: test_cases.md
tests/python-pro/: test_cases.md
tests/test_cli/: __init__.py  conftest.py  test_create.py  test_list.py  test_validate.py
tests/user-scenarios/: debugging-session.sh  debugging_session.py  devops-installation.sh  release-engineering.sh  release_engineering.py  skill-authoring.sh  skill_authoring.py
(+12 files in other folders)
