[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-agent-skills"
version = "1.0.0"
description = "Production-grade skills for Hermes Agent — self-evolving, persona-aware, slash-command native"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ow1onp", email = "Ow1onp@Outlook.com"},
]
keywords = [
    "hermes-agent",
    "agent-skills",
    "ai-agent",
    "skill-collection",
    "self-evolving",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
]

[project.scripts]
hermes-skills-validator = "hermes_agent_skills.cli:main"

[project.urls]
Homepage = "https://github.com/Ow1onp/hermes-agent-skills"
Documentation = "https://github.com/Ow1onp/hermes-agent-skills#readme"
Repository = "https://github.com/Ow1onp/hermes-agent-skills"
Issues = "https://github.com/Ow1onp/hermes-agent-skills/issues"

[tool.setuptools]
packages = ["hermes_agent_skills"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short", "--strict-markers"]
